outputs/tsp_aco-aco/2026-03-05_09-45-47/problem_iter9_response1.txt_stdout.txt
Traceback (most recent call last):
  File "D:\reevo/problems/tsp_aco/eval.py", line 20, in <module>
    import gpt
  File "D:\reevo\problems\tsp_aco\gpt.py", line 260
    boosted[i, j] = boosted[j, i] *= (1 + 0.25 * total_boost)
                                  ^^
SyntaxError: invalid syntax
